--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                     <div class='contact-info-item padd-15'>
                         <div class='icon'><i class='fa fa-globe-europe'></i></div>
                         <h4>Website</h4>
-                        <p>www.jayeshgawade.com</p>
+                        <p><a href="https://jayeshgwd580.github.io/jayeshgawade">www.jayeshgawade.com</a>/</p>
                     </div>
                     <!-- Contact info item  end-->
                 </div>
