new updated content 14/2/2026

--- a/index.html
+++ b/index.html
@@ -42,11 +42,16 @@
                     <div class='home-info padd-15'>
                         <h3 class='hello'>Hello, My name is <span class='name'>Jayesh Gawade</span></h3>
                         <h3 class='my-profession'>I'm a <span class='typing'>Web Devloper</span></h3>
-                        <p>I'm a Web Devloper Detail-Oriented and result-driven Computer Engineer in Strong Background 
-                            in Web Development, including experience with HTML, CSS, JavaScript, React, and PHP.<br/>
-                            Proficient in using Git and GitHub for version control and collaboration in software development projects.<br/>
-                            Skilled in designing and implementing responsive, user-friendly websites and web applications.<br/>
-                            Passionate about continuously learning and staying up-to-date with the latest developments in web development.
+                        <p style="text-align: justify;">
+                            I'm a Detail-Oriented and Result-Driven Web Developer with <strong>2.5+ years of professional experience in PHP Web Development</strong> and a strong background in Computer Engineering.
+                            Previously worked at <strong>Softaculous Ltd.</strong> where I contributed to the development and enhancement of their PHP-based browser application Virtualizor,
+                        </p>
+                        <p style="text-align: justify;">
+                            A powerful VPS management platform. My responsibilities included implementing new features, resolving client-reported issues, improving application performance and stability, and actively maintaining the product. I also successfully upgraded the core application from PHP 7 to PHP 8, ensuring compatibility, improved performance, and adherence to modern development standards while working extensively with PHP, HTML, CSS, and JavaScript.
+                        </p>
+                        <p style="text-align: justify;">
+                            Proficient in using Git and GitHub for version control, collaboration, and efficient project management in real-world development environments.
+                            Skilled in designing and implementing responsive, user-friendly, and performance-optimized websites and web applications following modern development standards and best practices.
                         </p>
                         <a href='resume/jayeshresume.pdf' class='btn' download>Download CV</a>
                     </div>
@@ -69,17 +74,11 @@
                     <div class='about-content padd-15'>
                         <div class='row'>
                             <div class='about-text padd-15'>
-                                <h3>I'm Jayesh Gawade and I'm a <span>Frontend Web Developer</span></h3>
-                                <p>Completed my Computer Engineering in 2020
-                                    with strong skills in web development, including
-                                    HTML, CSS, JavaScript, React, PHP, and data
-                                    structures and algorithms. Proficient in
-                                    designing and implementing user-friendly and
-                                    responsive websites and web applications.
-                                    Committed to using technology to make a
-                                    positive impact and eager to bring my skills and
-                                    passion to a dynamic and innovative company.
+                                <h3>I'm Jayesh Gawade and I'm a <span>PHP Developer</span></h3>
+                                <p style="text-align: justify; padding-bottom: 5px;">I have strong technical skills in HTML, CSS, JavaScript, React, and PHP, along with hands-on experience in building responsive, user-friendly, and high-performance web applications.
                                 </p>
+                                <p style="text-align: justify; padding-bottom: 5px;">I worked at <strong>Softaculous Ltd. </strong>from April 2023 to September 2026, where I contributed to developing and enhancing a PHP-based browser application for VPS management. My responsibilities included implementing new features, resolving client-reported issues, maintaining application performance and stability, and successfully upgrading the core application from PHP 7 to PHP 8 to ensure modern compatibility and improved efficiency.</p>
+                                <p style="text-align: justify; padding-bottom: 5px;">I am passionate about continuous learning, improving development standards, and leveraging technology to build impactful and scalable solutions while contributing effectively to innovative and growth-oriented teams.</p>
                             </div>
                         </div>
                         <div class='row'>
@@ -92,10 +91,10 @@
                                         <p>Age: <span>26</span></p>
                                     </div>
                                     <div class='info-item padd-15'>
-                                        <p>Portfolio Website: <span><a href="https://jayeshgwd580.github.io/jayeshprofile/">jayeshgwd580.github.io/jayeshgawade/</a></span></p>
+                                        <p>Portfolio Website: <span><a href="https://jayeshgwd580.github.io/jayeshprofile/" target="_blank">jayeshgwd580.github.io/jayeshgawade/</a></span></p>
                                     </div>
                                     <div class='info-item padd-15'>
-                                        <p>Website: <span>www.jayeshgawade.com</span></p>
+                                        <p>Website: <span>jayeshgawade.xyz</span></p>
                                     </div>
                                     <div class='info-item padd-15'>
                                         <p>Email: <span>jayeshgawade8@gmail.com</span></p>
@@ -138,6 +137,22 @@
                                     </div>
 
                                     <div class='skill-item padd-15'>
+                                        <h5>PHP</h5>
+                                        <div class='progress'>
+                                            <div class='progress-in' style="width:85%"></div>
+                                            <div class='skill-percent'>85%</div>
+                                        </div>
+                                    </div>
+
+                                    <div class='skill-item padd-15'>
+                                        <h5>Linux</h5>
+                                        <div class='progress'>
+                                            <div class='progress-in' style="width:85%"></div>
+                                            <div class='skill-percent'>85%</div>
+                                        </div>
+                                    </div>
+
+                                    <div class='skill-item padd-15'>
                                         <h5>BOOTSTRAP</h5>
                                         <div class='progress'>
                                             <div class='progress-in' style="width:76%"></div>
@@ -157,15 +172,23 @@
                                         <h5>REACTJS</h5>
                                         <div class='progress'>
                                             <div class='progress-in' style="width:65%"></div>
-                                            <div class='skill-percent'>65%</div>
+                                            <div class='skill-percent'>55%</div>
                                         </div>
                                     </div>
 
                                     <div class='skill-item padd-15'>
-                                        <h5>PHP</h5>
+                                        <h5>LARAVEL</h5>
                                         <div class='progress'>
-                                            <div class='progress-in' style="width:85%"></div>
-                                            <div class='skill-percent'>85%</div>
+                                            <div class='progress-in' style="width:65%"></div>
+                                            <div class='skill-percent'>70%</div>
+                                        </div>
+                                    </div>
+
+                                    <div class='skill-item padd-15'>
+                                        <h5>REST API</h5>
+                                        <div class='progress'>
+                                            <div class='progress-in' style="width:65%"></div>
+                                            <div class='skill-percent'>40%</div>
                                         </div>
                                     </div>
 
@@ -197,6 +220,14 @@
                                         <h5>PYTHON</h5>
                                         <div class='progress'>
                                             <div class='progress-in' style="width:50%"></div>
+                                            <div class='skill-percent'>76%</div>
+                                        </div>
+                                    </div>
+
+                                    <div class='skill-item padd-15'>
+                                        <h5>DevOps</h5>
+                                        <div class='progress'>
+                                            <div class='progress-in' style="width:50%"></div>
                                             <div class='skill-percent'>50%</div>
                                         </div>
                                     </div>
@@ -206,9 +237,7 @@
                         <div class='row'>
                             <div class='about-text' style="padding-top: 25px;">
                                 <h3 style="margin-bottom: 0px;">Objective</h3>
-                                <p>Seeking a challenging and dynamic web development role in a reputable company, 
-                                    where I can leverage my technical skills and passion for technology to contribute 
-                                    to the growth of the organization and enhance my professional growth.
+                                <p>To leverage my 2.5+ years of professional experience in PHP web development and strong foundation in Computer Engineering to build scalable, high-performance, and user-focused web applications. I aim to contribute my technical expertise, problem-solving skills, and continuous learning mindset to a growth-oriented organization where I can deliver impactful solutions while advancing my development skills and professional career.
                                 </p>
                             </div>
                         </div>
@@ -264,6 +293,20 @@
                                                 <h4 class='timeline-title'>The Butterfly Effect</h4>
                                                 <p class='timeline-text'>
                                                 Worked as an Web Developer in The Butterfly Effect is a marketing agency based in Mumbai & Pune</p>
+                                            </div>
+
+                                             <!-- timeline item  -->
+                                            <div class='timeline-item'>
+                                                <div class='circle-dot'></div>
+                                                <h3 class='timeline-date'>
+                                                    <i class='fa fa-calendar'></i>April 2023 - September 2025
+                                                </h3>
+                                                <h4 class='timeline-title'>Softaculous Ltd.</h4>
+                                                <p class='timeline-text' style="padding-bottom: 8px;">
+                                                Worked at Softaculous Ltd. as a PHP Developer, contributing to the development and enhancement of a PHP-based VPS management browser application. Gained extensive hands-on experience working with Linux environments including RedHat and multiple operating systems while building and maintaining scalable backend functionalities.</p>
+                                                <p class='timeline-text'>Actively implemented new features such as snapshot functionality, Proxmox import, and high availability support to enhance system performance and usability. Responsible for identifying and fixing critical bugs, optimizing application stability, and ensuring smooth platform performance in production environments.</p>
+                                                <p class='timeline-text'>Provided technical support to a global user base by handling assigned support tickets, diagnosing issues, troubleshooting server and application problems, and delivering effective solutions to improve user satisfaction. Collaborated closely with the development team to maintain code quality, implement improvements, and upgrade the application from PHP 7 to PHP 8 for better performance and modern compatibility.</p>
+                                                <p class='timeline-text'>Through this experience, developed strong skills in PHP development, Linux server management, problem-solving, debugging, and building reliable, scalable web applications in real-world production environments.</p>
                                             </div>
                                         </div>
                                     </div>
