--- a/index.html
+++ b/index.html
@@ -419,22 +419,22 @@
                 </div>
                 <div class='row'>
                     <!-- portfolio item start  -->
-                    <div class='portfolio-item padd-15'>
+                    <!-- <div class='portfolio-item padd-15'>
                         <div class='portfolio-item-inner shadow-dark'>
                             <a target="_blank" href="https://filmy4movies.co.in/" class='portfolio-img'>
                                 <img src='img/works/filmy4movies.PNG' alt='portfolio img' />
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- portfolio item end  -->
                     <!-- portfolio item start  -->
-                    <div class='portfolio-item padd-15'>
+                    <!-- <div class='portfolio-item padd-15'>
                         <div class='portfolio-item-inner shadow-dark'>
                             <a target="_blank" href="https://nutritionallyyours.in/" class='portfolio-img'>
                                 <img src='img/works/nutritionallyyours.PNG' alt='portfolio img' />
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- portfolio item end  -->
                     <!-- portfolio item start  -->
                     <div class='portfolio-item padd-15'>
@@ -455,13 +455,13 @@
                     </div>
                     <!-- portfolio item end  -->
                     <!-- portfolio item start  -->
-                    <div class='portfolio-item padd-15'>
+                    <!-- <div class='portfolio-item padd-15'>
                         <div class='portfolio-item-inner shadow-dark'>
                             <a target="_blank" href="http://moontravels1611.000webhostapp.com/" class='portfolio-img'>
                                 <img src='img/works/moontravels.PNG' alt='portfolio img' />
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- portfolio item end  -->
                     <!-- portfolio item start  -->
                     <div class='portfolio-item padd-15'>
@@ -530,7 +530,7 @@
                     <div class='contact-info-item padd-15'>
                         <div class='icon'><i class='fa fa-globe-europe'></i></div>
                         <h4>Website</h4>
-                        <p><a href="https://jayeshgwd580.github.io/jayeshgawade">www.jayeshgawade.com</a>/</p>
+                        <p><a href="http://www.jayeshgawade.xyz">www.jayeshgawade.xyz</a>/</p>
                     </div>
                     <!-- Contact info item  end-->
                 </div>
