mytodo project added

--- a/index.html
+++ b/index.html
@@ -490,6 +490,15 @@
                         </div>
                     </div>
                     <!-- portfolio item end  -->
+                     <!-- portfolio item start  -->
+                    <div class='portfolio-item padd-15'>
+                        <div class='portfolio-item-inner shadow-dark'>
+                            <a target="_blank" href="https://jayeshgwd580.github.io/mytodo/" class='portfolio-img'>
+                                <img src='img/works/mytodo.png' alt='portfolio img' />
+                            </a>
+                        </div>
+                    </div>
+                    <!-- portfolio item end  -->
                 </div>
             </div>
          </section>
