--- a/index.html
+++ b/index.html
@@ -419,13 +419,13 @@
                 </div>
                 <div class='row'>
                     <!-- portfolio item start  -->
-                    <!-- <div class='portfolio-item padd-15'>
+                    <div class='portfolio-item padd-15'>
                         <div class='portfolio-item-inner shadow-dark'>
-                            <a target="_blank" href="https://filmy4movies.co.in/" class='portfolio-img'>
+                            <a target="_blank" href="https://jayeshgwd580.github.io/filmy4movies/" class='portfolio-img'>
                                 <img src='img/works/filmy4movies.PNG' alt='portfolio img' />
                             </a>
                         </div>
-                    </div> -->
+                    </div>
                     <!-- portfolio item end  -->
                     <!-- portfolio item start  -->
                     <!-- <div class='portfolio-item padd-15'>
@@ -490,11 +490,20 @@
                         </div>
                     </div>
                     <!-- portfolio item end  -->
-                     <!-- portfolio item start  -->
+                    <!-- portfolio item start  -->
                     <div class='portfolio-item padd-15'>
                         <div class='portfolio-item-inner shadow-dark'>
                             <a target="_blank" href="https://jayeshgwd580.github.io/mytodo/" class='portfolio-img'>
                                 <img src='img/works/mytodo.png' alt='portfolio img' />
+                            </a>
+                        </div>
+                    </div>
+                    <!-- portfolio item end  -->
+                    <!-- portfolio item start  -->
+                    <div class='portfolio-item padd-15'>
+                        <div class='portfolio-item-inner shadow-dark'>
+                            <a target="_blank" href="https://jayeshgwd580.github.io/color-box/" class='portfolio-img'>
+                                <img src='img/works/colorbox.png' alt='portfolio img' />
                             </a>
                         </div>
                     </div>
